# berkson.github.io

./: .gitignore  CNAME  KISS.md  LICENSE  Makefile  README.md  Setup.hs  _mdwriter.cson  about.md  blog.cabal  blog.hs  deploy.sh  feed.xml  index.html  readme.markdown  readme.md  stack.yaml
assets/: deploy.sh
blog/: index.html
contact/: index.html
css/: base.css  base.hs
fonts/: subset.py
fonts/extra/: math-upright.sfd
images/: compress.sh
journal/: LICENSE
journal/css/: base.css  skeleton.css
journal/drafts/: 2015-07-24-fitness-flakiness-and-progression.markdown  2015-08-04-how-i-met-berkson.markdown  2015-08-14-how-i-met-berkson.markdown  2015-09-14-organized-chaos.markdown  2015-09-20-being-submissive-to-someone-with-problems.markdown  2016-04-29-no-one-is-perfect.markdown  2016-04-29-on-being-blind.markdown
journal/fonts/: generate.py
journal/images/: compress.sh
journal/page/: about.markdown  mantra.markdown  rules.markdown
journal/pages/: archive.html  contact.html  index.html  lifestyle.html  mantra.html
journal/post/: 2014-08-20-Submissive-and-Stupid.md  2015-07-03-I-lit-my-hair-on-fire.md
journal/posts/: 2014-08-20-submissive-and-stupid.markdown  2015-06-11-People-I-know-scare-me.markdown  2015-06-11-people-i-know-scare-me.markdown  2015-07-03-I-lit-my-hair-on-fire.markdown  2015-07-03-i-lit-my-hair-on-fire.markdown  2015-07-23-Love-is-complicated.md  2015-07-23-love-is-complicated.markdown  2015-07-27-flakiness-obligations-and-fitness.markdown  2015-08-04-progress-report-week-1.markdown  2015-08-11-progress-report-week-2.markdown  2015-08-14-how-i-met-berkson.markdown  2015-10-01-your-wounds-dont-make-you-any-less-beautiful.markdown  2015-10-06-disabilities-and-submission-part-1.markdown  blank  (+34 more)
lifestyle/: index.html
mantra/: index.html
post/: 2014-08-20-Submissive-and-Stupid.md  2015-06-11-People-I-know-scare-me.md
posts/: alone-in-my-room.md  atychiphobia.md  dirty-little-secrets.md  dominant-directed-diary-part-1-love.md  hiding-behind-a-mask.md  i-am-an-argonaut.md  i-lit-my-hair-on-fire.md  shattering-fire.md  the-whole-person-approach-to-submission.md  your-wounds-dont-make-you-any-less-beautiful.md
provider/: about.md
source/: Html.hs  Image.hs  Main.hs  Minification.hs  Post.hs  Template.hs  Type.hs  blog.hs  deploy.sh
src/: Html.hs  Image.hs  Main.hs  Minification.hs  Post.hs  Template.hs  Type.hs  blog.hs  deploy.sh
template/: default.html  index.html  post-item.html  post.html
templates/: archive.html  footer.html  head.html  index.html  page.css
tools/: grid.js  stats.awk  stats.sh
(+68 files in other folders)
