name:             PrickYourFinger
version:          1.0.0.0
synopsis:         Personal journal of Eiren & Berkson
description:      Personal journal of Eiren & Berkson
homepage:         www.PrickYourFinger.org
license:          MIT
license-file:     LICENSE
author:           Eiren & Berkson
maintainer:       berkson@prickyourfinger.org
copyright:        (C) 2014-2015 Eiren & Berkson
category:         Web
build-type:       Simple

cabal-version: >=1.10

executable blog
  main-is: blog.hs
  ghc-options: -Wall
  -- other-modules:
  other-extensions: OverloadedStrings
  build-depends:
      base >=4.7
    , containers >= 0.5.5.1
    , hakyll >= 4.5
    , network-uri >= 2.6.0.1
    , pandoc >= 1.12
    , filepath >= 1.3.0.2
    , pandoc-types >= 1.12.4.1
    , blaze-html   >= 0.6.1.1
    , process      >= 1.2.3.0
  -- hs-source-dirs:
  default-language: Haskell2010
