name:                   PrickYourFinger
version:                2.5.3
synopsis:               Personal journal of Eiren & Berkson
homepage:               www.prickyourfinger.org
license:                OtherLicense
license-file:           LICENSE
author:                 Eiren & Berkson
maintainer:             eiren.berkson@gmail.com
copyright:              © 2014-2015 Eiren & Berkson
category:               Web
build-type:             Custom

cabal-version:                                 >= 1.22

executable blog
  hs-source-dirs:       source/
  main-is:              blog.hs
  ghc-options:          -O2 -Wall -threaded
  other-extensions:     OverloadedStrings
  default-language:     Haskell2010
  build-depends:
                        base                                 ,
                        containers             >= 0.5.5.1    ,
                        hakyll                 >= 4.5        ,
                        network-uri            >= 2.6.0.1    ,
                        pandoc                 >= 1.12       ,
                        filepath               >= 1.3.0.2    ,
                        pandoc-types           >= 1.12.4.1   ,
                        blaze-html             >= 0.6.1.1    ,
                        process                >= 1.2.3.0    ,
                        split                  >= 0.2.2      ,
                        xml                    >= 1.3.14     ,
                        directory              >= 1.2.2.0    ,
                        time                   >= 1.5.0.1    ,
                        data-default-class     >= 0.0.1
